chore: Use swift lib artefact to run TouchId